--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Travel Guide App | Your Friendly Travel Companion</title>
+    <title>Travel Guide App</title>
     <meta name="description" content="An intelligent app that dynamically generates geographic and weather forecast information based on simple travel inputs." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="images/favicon.ico" />
