--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <input type="date" id="return-date-input" name="return-date-input" required />
             </div>
-            <input type="text" id="destination-input" placeholder="Enter destination (e.g., Shanghai)" required />
+            <input type="text" id="destination-input" placeholder="Enter destination (e.g., Madrid)" required />
             <textarea id="remarks-input" rows="2" placeholder="Remarks (optional)"></textarea>
             <input type="submit" name="generate-travel-info" value="Generate" class="generate-button" />
             <div class="process-message"></div>
@@ -101,7 +101,7 @@
                 <p>
                     API by
                     <a href="https://www.geonames.org/" target="_blank">Geonames</a> •
-                    <a href="https://www.weatherbit.io/" target="_blank">WeatherBit</a> •
+                    <a href="https://www.openweathermap.org/" target="_blank">OpenWeatherMap</a> •
                     <a href="https://pixabay.com/" target="_blank">Pixabay</a>
                 </p>
             </div>
